<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".presentation.RegistrationActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:text="SickNasty"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/signUpName"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:drawableLeft="@drawable/ic_action_face"
        android:ems="10"
        android:background="@drawable/edit_text_border"
        android:hint="Enter your name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/signUpUsername"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/ic_action_name"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/signUpName"
        app:layout_constraintStart_toStartOf="@+id/signUpName"
        app:layout_constraintTop_toBottomOf="@+id/signUpName" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/signUpUsername"
        app:layout_constraintStart_toStartOf="@+id/signUpUsername"
        app:layout_constraintTop_toBottomOf="@+id/signUpUsername" />


    <Button
        android:id="@+id/Register"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_border"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="@+id/signUpPassword"
        app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="217dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="Already signed up?"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="107dp"
        android:layout_height="40dp"
        android:text="Sign in"
        android:textSize="18sp"
        android:background="@drawable/button_border"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>