<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".presentation.CreateCommunityActivity">


    <Button
        android:id="@+id/addCommunity"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/button_border"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="Create"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/communityNameAdder"
        app:layout_constraintTop_toBottomOf="@+id/communityNameAdder" />

    <EditText
        android:id="@+id/communityNameAdder"
        android:layout_width="254dp"
        android:layout_height="71dp"
        android:layout_marginTop="216dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="      Enter a Community Name"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
