<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".presentation.PageActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Followers" />

        <TextView
            android:id="@+id/Following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Following" />

        <TextView
            android:id="@+id/Posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Posts" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="131dp"
        android:layout_height="129dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_profile" />

    <ListView
        android:id="@+id/lvPost"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:layout_marginTop="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="87dp"
        android:layout_height="113dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_settings" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="159dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="181dp"
        android:layout_height="45dp"
        android:layout_marginTop="21dp"
        android:background="@android:color/black"
        android:text="Post!!"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/profileName" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/button_border"
        android:backgroundTint="@android:color/darker_gray"
        android:text="Search"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/postButton" />

    <Button

        android:id="@+id/communityListButton"
        android:layout_width="358dp"
        android:layout_height="61dp"
        android:background="@drawable/button_border"
        android:text="Manage Communities"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/lvPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postButton"
        app:layout_constraintVertical_bias="0.329" />

</androidx.constraintlayout.widget.ConstraintLayout>
