<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CommunityListPageActivity">

    <ListView
        android:id="@+id/communityList"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/createCommunityButton"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="113dp"
        android:layout_height="103dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/communityList"
        app:srcCompat="@drawable/ic_create_community" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="106dp"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:text="ADD"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/createCommunityButton"
        app:layout_constraintTop_toBottomOf="@+id/communityList" />


</androidx.constraintlayout.widget.ConstraintLayout>

