...
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:layout_marginTop="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/followButton"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/followButton"
        android:layout_width="175dp"
        android:layout_height="45dp"
...
        android:text="Message"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/followButton"
        app:layout_constraintTop_toTopOf="@+id/followButton" />

    <Button
        android:id="@+id/home"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/button_border"
        android:backgroundTint="@android:color/darker_gray"
...
